--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/
+    - lib/assets/tap.mp3
+    - lib/assets/win.mp3
+    - lib/assets/draw.mp3
+    - lib/assets/error.mp3
+    - lib/assets/menu.mp3
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
