--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/tap.mp3
+    - lib/assets/tap.wav
     - lib/assets/win.mp3
     - lib/assets/draw.mp3
     - lib/assets/error.mp3
